# stophammer-parser

./: Cargo.toml
src/: date.rs  duration.rs  engine.rs  error.rs  html.rs  lib.rs  phase.rs  profile.rs  rule.rs  transform.rs  types.rs
tests/: basic.rs  duration.rs  payment.rs  phase.rs  regression.rs
tests/fixtures/: basic.xml  edge_cases.xml  no_guid.xml  payment.xml
